Fix Size Overflowing, Updating Contents, Font

--- a/asset/css/global.css
+++ b/asset/css/global.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap'); 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Quando&display=swap');
 
 :root{
     --primary-color: #CF1E51;
@@ -14,10 +14,15 @@
     --text-dark-color: #333;
 }
 
+.logo img{
+  max-width: 250px;
+}
+
 *{
-    font-family: 'Montserrat','Pacifico', sans-serif;
+    font-family: 'Quando','Montserrat','Pacifico', sans-serif;
     padding: 0;
     margin: 0;
+    box-sizing:border-box ;
 }
 
 .container {
